--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/preset-env": "7",
     "@babel/runtime": "7",
     "@fortawesome/fontawesome-free": "^6.2.0",
+    "@headlessui/vue": "^1.7.7",
     "@rails/ujs": "^7.0.4",
     "@tailwindcss/forms": "^0.5.3",
     "@types/humps": "^2.0.2",
